<resources>
    <string name="app_name">Gohits</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">My Event</string>
    <string name="title_notifications">Add Event</string>
    <string name="register_ek3_string">Register</string>
    <string name="username_string">Username</string>
    <string name="phone_no_string">Phone no</string>
    <string name="password_string">Password</string>
    <string name="submit_string">Submit</string>
    <string name="login_string">Login</string>
    <string name="elevate_your_game_and_experience_string">Elevate your game and experience</string>
    <string name="login_ek3_string">Login</string>
    <string name="register_string">Register</string>
    <string name="forgot_password_string">Forgot Password</string>
    <string name="experience_string">Contact</string>
    <string name="inicio_qui_nes_somos_string">+62 812-3310-1086</string>
    <string name="med_map_gmail_com_string">gohit@stiki.ac.id</string>
    <string name="inicio_qui_nes_somos_ek1_string">Jl. Raya Tidar No.100, Karangbesuki, Kec. Sukun, Kota Malang, Jawa Timur 65146</string>
    <!--    <string name="app_name">Mobile</string>-->
    <string name="ek_img_content">ExportKit Image</string>
    <string name="name_string">Name</string>
    <string name="varis_anggito_string">Varis anggito</string>
    <string name="search_event_string">Search Event</string>
    <string name="badminton_string">Badminton</string>
    <string name="football_string">Football</string>
    <string name="esport_string">Esport</string>
    <string name="running_string">Running</string>
    <string name="_09_41_string">09:41</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>