<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Regis">

    <LinearLayout android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout android:id="@+id/page_register_ek1"
            android:layout_marginTop="0dp"
            android:layout_marginStart="0dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <View   android:id="@+id/_bg__register_ek2"
                android:background="@drawable/_bg__register_ek2_shape"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <View   android:id="@+id/ellipse_84"
                android:background="@drawable/ellipse_84_shape"
                android:alpha="0.74000000953674"
                android:layout_marginStart="330dp"
                android:layout_marginTop="184dp"
                android:layout_width="70dp"
                android:layout_height="70dp" />


            <View
                android:id="@+id/ellipse_85"
                android:layout_width="70dp"
                android:layout_height="71dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="620dp"
                android:alpha="0.74000000953674"
                android:background="@drawable/ellipse_85_shape" />

            <RelativeLayout android:id="@+id/frame_12"
                android:layout_marginTop="209dp"
                android:layout_marginStart="45dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <View   android:id="@+id/_bg__frame_12_ek1"
                    android:background="@drawable/_bg__frame_12_ek1_shape"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="315.45dp"
                    android:layout_height="506.34dp" />


                <RelativeLayout android:id="@+id/frame_9"
                    android:layout_marginTop="35dp"
                    android:layout_marginStart="22dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <TextView android:id="@+id/register_ek3"
                        android:textSize="35sp"
                        android:textColor="@color/register_ek3_color"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="162.5dp"
                        android:layout_height="56.5dp"
                        android:text="@string/register_ek3_string"
                        />


                    <RelativeLayout android:id="@+id/frame_8"
                        android:layout_marginTop="81dp"
                        android:layout_marginStart="0dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                        <RelativeLayout android:id="@+id/frame_7"
                            android:layout_marginTop="0dp"
                            android:layout_marginStart="0dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            >

                            <RelativeLayout android:id="@+id/group_9"
                                android:layout_marginTop="0dp"
                                android:layout_marginStart="0dp"
                                android:layout_width="271.45dp"
                                android:layout_height="43.87dp"
                                >
                                <EditText android:id="@+id/username"
                                    android:gravity="center"
                                    android:background="@drawable/rectangle_12_shape"
                                    android:textSize="14sp"
                                    android:textColor="@color/username_color"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:hint="@string/username_string"
                                    android:textColorHint="@color/username_color"
                                    />

                            </RelativeLayout>

                            <RelativeLayout
                                android:id="@+id/groupemail"
                                android:layout_marginTop="63.87dp"
                                android:layout_marginStart="0dp"
                                android:layout_width="271.45dp"
                                android:layout_height="43.87dp"
                                >
                                <EditText
                                    android:id="@+id/email"
                                    android:gravity="center"
                                    android:background="@drawable/rectangle_12_shape"
                                    android:textSize="14sp"
                                    android:textColor="@color/username_color"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:hint="Email"
                                    android:textColorHint="@color/username_color"
                                    />

                            </RelativeLayout>


                            <RelativeLayout android:id="@+id/group_10"
                                android:layout_marginTop="127.74dp"
                                android:layout_marginStart="0dp"
                                android:layout_width="271.45dp"
                                android:layout_height="43.87dp"
                                >

                                <EditText android:id="@+id/pass1"
                                    android:gravity="center"
                                    android:background="@drawable/rectangle_12_ek1_shape"
                                    android:textSize="14sp"
                                    android:textColor="@color/username_color"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:hint="@string/password_string"
                                    inputType="textPassword"
                                    android:textColorHint="@color/username_color"
                                    />

                            </RelativeLayout>


                            <RelativeLayout android:id="@+id/group_11"
                                android:layout_marginTop="191.61dp"
                                android:layout_marginStart="0dp"
                                android:layout_width="271.45dp"
                                android:layout_height="43.87dp"
                                >

                                <EditText android:id="@+id/pass2"
                                    android:gravity="center"
                                    android:background="@drawable/rectangle_12_ek1_shape"
                                    android:textSize="14sp"
                                    android:textColor="@color/username_color"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:hint="Re-enter Password"
                                    android:inputType="textPassword"
                                    android:textColorHint="@color/username_color"
                                    />

                            </RelativeLayout>

                        </RelativeLayout>


                        <RelativeLayout android:id="@+id/frame_6"
                            android:layout_marginTop="271.47dp"
                            android:layout_marginStart="0dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            >

                            <RelativeLayout android:id="@+id/group_13"
                                android:layout_marginTop="0dp"
                                android:layout_marginStart="0dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                >

                                <Button
                                    android:background="@drawable/rectangle_14_shape"
                                    android:id="@+id/regis"
                                    android:layout_width="271.45dp"
                                    android:layout_height="43.87dp"
                                    android:layout_marginStart="0dp"
                                    android:layout_marginTop="0dp"
                                    android:text="Register"
                                    android:textColor="@color/username_color"
                                    android:textSize="14sp"
                                    android:textStyle="bold" />

                            </RelativeLayout>

                            <TextView android:id="@+id/login"
                                android:textStyle="bold"
                                android:alpha="0.5"
                                android:textSize="15sp"
                                android:textColor="@color/username_color"
                                android:layout_marginLeft="0dp"
                                android:layout_marginTop="63.87dp"
                                android:layout_width="53.5dp"
                                android:layout_height="24.5dp"
                                android:text="@string/login_string"
                                />

                        </RelativeLayout>

                    </RelativeLayout>

                </RelativeLayout>

            </RelativeLayout>


            <ImageView
                android:id="@+id/logo_png_2"
                android:layout_width="169dp"
                android:layout_height="68dp"
                android:layout_marginStart="120dp"
                android:layout_marginTop="77dp"
                android:contentDescription="logo_png_2"
                android:src="@drawable/logo_png_2" />

            <RelativeLayout
                android:id="@+id/frame_3"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:layout_marginTop="151dp">

                <TextView
                    android:id="@+id/elevate_your_game_and_experience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/elevate_your_game_and_experience_string"
                    android:textColor="@color/elevate_your_game_and_experience_color"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>